Prevent the global overlay container from overflowing dialogs
Fixes #5113

--- a/wcfsetup/install/files/style/ui/dialog.scss
+++ b/wcfsetup/install/files/style/ui/dialog.scss
@@ -298,6 +298,7 @@
 	max-width: var(--dialog-max-width);
 	min-height: 0;
 	min-width: 500px;
+	overflow: hidden;
 	padding: 0;
 }
 
